<?xml version="1.0" encoding="UTF-8"?>
<Dictionaries>
    <!-- Dictionary attributes:
     "nameResId" : the name of the dictionary. Should be short. Reference to a string in values.xml 
     "locale" : the ID of the dictionary's (ISO) locale, e.g., "en", "iw", "ar", "ru", etc. The keyboard should declare the same locale. 
     "id" : UUID for this dictionary. Obtain from here: http://www.famkruithof.net/uuid/uuidgen
     "dictionaryResourceId" : a reference to the raw resource of the words dictionary
     "autoTextResourceId" : a reference to a common typing mistakes XML.
     -->
	<Dictionary nameResId="@string/dictionary_en_fr" locale="en-fr" id="86d49fb0-ceb6-11e6-9598-0800200c9a66" type="binary_resource"
		dictionaryResourceId="@array/words_dict_en_fr_array"
		description="@string/dictionary_en_fr_description" />
	<!-- autoTextResourceId="@xml/autotext_en_fr"  -->
	<Dictionary nameResId="@string/dictionary_fr_aosp" locale="fr" id="86d49fb0-ceb6-11e6-9598-0800200c9a66" type="binary_resource"
		dictionaryResourceId="@array/words_dict_fr_aosp_array" autoTextResourceId="@xml/autotext_fr"
		description="@string/dictionary_fr_aosp_description" />
	<Dictionary nameResId="@string/dictionary_fr_dicollecte" locale="fr" id="8f9f4b90-ceb6-11e6-9598-0800200c9a66" type="binary_resource"
		dictionaryResourceId="@array/words_dict_fr_dicollecte_array" autoTextResourceId="@xml/autotext_fr"
    	description="@string/dictionary_fr_dicollecte_description" />
</Dictionaries>
