<?xml version="1.0" encoding="UTF-8"?>
<Keyboards>
    <!-- Dictionary attributes:
     "nameResId" : the name of the keyboard. Should be short. Reference to a string in values.xml 
     "defaultDictionaryLocale" : the ID of the keyboard's (ISO) locale, e.g., "en", "iw", "ar", "ru", etc. The dictionary should declare the same locale. 
     "id" : UUID for this keyboard. Obtain from here: http://www.famkruithof.net/uuid/uuidgen
     "iconResId" : a reference to a drawable which can be used to show a flag in the notification bar.
     "layoutResId" : a reference to a keyboard layout XML. See res/xml/qwerty.xml
     -->
	<Keyboard nameResId="@string/azerty_keyboard" iconResId="@drawable/fr_be" layoutResId="@xml/azerty"
		id="3feeb6e0-cf6e-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/azerty_keyboard_description" index="1" />
	<!--<Keyboard nameResId="@string/azerty_accents" iconResId="@drawable/fr_be" layoutResId="@xml/azerty_accents"
		id="475b3250-cf6e-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/azerty_accents_description" index="2" />-->
	<!--<Keyboard nameResId="@string/azerty_full" iconResId="@drawable/fr_be" layoutResId="@xml/azerty_full"
		id="44a735e0-cf6e-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/azerty_full_description" index="3" />-->

	<!--<Keyboard nameResId="@string/qwerty_keyboard" iconResId="@drawable/ca" layoutResId="@xml/qwerty"
	    id="03849460-cebd-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwerty_keyboard_description" index="4" />-->
	<Keyboard nameResId="@string/qwerty_accents" iconResId="@drawable/ca" layoutResId="@xml/qwerty_accents"
		id="35302fb0-cebd-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwerty_accents_description" index="5" />
	<!--<Keyboard nameResId="@string/qwerty_full" iconResId="@drawable/ca" layoutResId="@xml/qwerty_full"
		id="5ad8fe90-cebd-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwerty_full_description" index="6" />-->

	<!--<Keyboard nameResId="@string/qwertz_keyboard" iconResId="@drawable/ch" layoutResId="@xml/qwertz"
		id="ff9f5e20-cf70-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwertz_keyboard_description" index="7" />
	<Keyboard nameResId="@string/qwertz_accents" iconResId="@drawable/ch" layoutResId="@xml/qwertz_accents"
		id="692babf0-d011-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwertz_accents_description" index="8" />
	<Keyboard nameResId="@string/qwertz_full" iconResId="@drawable/ch" layoutResId="@xml/qwertz_full"
		id="82ecb070-d011-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/qwertz_full_description" index="9" />-->

	<!--<Keyboard nameResId="@string/bepo_keyboard" iconResId="@drawable/bepo" layoutResId="@xml/bepo"
        id="88503c80-d011-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/bepo_keyboard_description" index="10" />-->
	<Keyboard nameResId="@string/bepo_accents" iconResId="@drawable/bepo" layoutResId="@xml/bepo_accents"
		id="ab5eff90-d011-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/bepo_accents_description" index="11" />
	<!--<Keyboard nameResId="@string/bepo_full" iconResId="@drawable/bepo" layoutResId="@xml/bepo_full"
		id="af52a7f0-d011-11e6-9598-0800200c9a66" defaultDictionaryLocale="fr" description="@string/bepo_full_description" index="12" />-->
</Keyboards>
